feat: 전체 API 통합 및 지도 최적화 완성본

--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -78,10 +78,10 @@
         app:layout_constraintTop_toBottomOf="@id/adBannerContainer">
 
         <TextView
-            android:id="@+id/popularPostsTitle"
+            android:id="@+id/recommendationTitle"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="인기 게시글"
+            android:text="추천 게시물"
             android:textSize="18sp"
             android:textStyle="bold"
             app:layout_constraintBottom_toBottomOf="parent"
