--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -3,4 +3,10 @@
     <dimen name="toggle_stroke_width">1dp</dimen>
     <dimen name="activity_horizontal_margin">16dp</dimen>
     <dimen name="activity_vertical_margin">16dp</dimen>
+    
+    <!-- Day 탭 관련 -->
+    <dimen name="day_tab_margin">24dp</dimen>
+    <dimen name="day_indicator_width">60dp</dimen>
+    <dimen name="day_indicator_height">3dp</dimen>
+    <dimen name="day_indicator_margin_top">4dp</dimen>
 </resources> 
